--- a/javascript/repetição/exercicio02.html
+++ b/javascript/repetição/exercicio02.html
@@ -41,7 +41,7 @@
 
         <br>
 
-        <select name="tabuada" id="tabuada">
+        <select name="tabuada" id="tabuada" size="10">
             <option value="">Digite um valor acima</option>
         </select>
     </main>
@@ -56,11 +56,6 @@
             } else{
                 numero = Number(numero.value)
 
-                if(){
-
-                } else{
-
-                }
             }
         }
     </script>
