--- a/javascript/DOM.html
+++ b/javascript/DOM.html
@@ -12,7 +12,8 @@
     <p>Eu amo <strong>mimi</strong></p>
 
     <script>
-        var paragrafo = document.getElementsByTagName("p")[1] //seleciona todos os paragrafos.
+        var paragrafo = document.getElementsByTagName("p") //seleciona todos os paragrafos.
+        
         document.write(`Isto é o que esta escrito no parágrafo 03 '${paragrafo.innerText} <br>'`) //Para que o JavaScript replique o que está escrito, é necessário criar uma variável.
 
         paragrafo.style.color = "blue"; //Muda o estilo do parágrafo
