--- a/javascript/repetição/exercicio01.html
+++ b/javascript/repetição/exercicio01.html
@@ -57,9 +57,9 @@
 
     <script>
         function contar (){
-            inicio = document.getElementById('n1')
-            fim = document.getElementById('n2')
-            passo = document.getElementById('passo')
+            let inicio = document.getElementById('n1')
+            let fim = document.getElementById('n2')
+            let passo = document.getElementById('passo')
             
 
             if (inicio.value.length == 0 || fim.value.length == 0 || passo.value.length == 0){
@@ -73,10 +73,10 @@
                 passo = Number(passo.value)
 
                 if (inicio <= fim){
-                    for(c = inicio; c <= fim; c += passo){
+                    for(let c = inicio; c <= fim; c += passo){
                         resposta.innerHTML += `${c}..`}
                 } else{
-                    for(c = inicio; c >= fim; c -= passo){
+                    for(let c = inicio; c >= fim; c -= passo){
                         resposta.innerHTML += `${c}..`}
                 } 
             }
