--- a/html-css/media-queries/MQ001/ex001.html
+++ b/html-css/media-queries/MQ001/ex001.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="estilos/tela.css" media="screen">
-    <link rel="stylesheet" href="estilos/mq.css" media="print">
+    <link rel="stylesheet" href="estilos/tela.css" media="all"> <!--Configuração de estilo que serve para todas os tipos de telas-->
+    <link rel="stylesheet" href="estilos/paisagem.css" media="screen and (orientation: landscape)"> <!--Configuração para telas deitadas-->
+    <link rel="stylesheet" href="estilos/retrato.css" media="screen and (orientation: portrait)"> <!--Configuração para telas em pé-->
     <title>Media Query</title>
 </head>
 <body>
