--- a/html-css/media-queries/MQ001/ex001.html
+++ b/html-css/media-queries/MQ001/ex001.html
@@ -11,11 +11,13 @@
 <body>
     <header>
         <h1>NOTÍCIAS</h1>
-        <ul>
-            <li>Esporte</li>
-            <li>Politica</li>
-            <li>Tecnologia</li>
-        </ul>
+        <nav>
+            <ul>
+                <li>Esporte</li>
+                <li>Politica</li>
+                <li>Tecnologia</li>
+            </ul>
+        </nav>
     </header>
 
     <main>
