--- a/html-css/flexbox/justify-content.html
+++ b/html-css/flexbox/justify-content.html
@@ -8,7 +8,7 @@
     .container {
       display: flex;
       flex-flow: row wrap; /*Vai funcionar tendo quebra de linha ou não.*/
-      justify-content: flex-end; 
+      justify-content: space-evenly; 
       border: 2px solid black;
       height: 300px;
     }
