--- a/html-css/flexbox/exercícios/ex01.html
+++ b/html-css/flexbox/exercícios/ex01.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="estiloex01.css">
+    <link rel="stylesheet" href="estilo01ex01.css">
+    <link rel="stylesheet" href="estilo02ex01.css">
     <title>Menu Responsivo exercício 01</title>
 </head>
 <body>
